[UPD] v3.5
- Swagger docs completed
