# app/Routes/salas.ts
@@ -1,7 +1,8 @@
 import Route from '@ioc:Adonis/Core/Route'
 
 Route.group(() => {
-  Route.get('get/:id?', 'SalasController.get')
+  Route.get('get', 'SalasController.get')
+  Route.get('get/:id', 'SalasController.getId')
   Route.post('create', 'SalasController.create')
   Route.put('update/:id', 'SalasController.update')
   Route.delete('delete/:id', 'SalasController.delete')
